--- a/PromptPal/tsconfig.json
+++ b/PromptPal/tsconfig.json
@@ -1,6 +1,8 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": "./node_modules/expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "jsx": "react-jsx",
+    "types": ["nativewind/types"]
   }
 }
