--- a/PromptPal/package.json
+++ b/PromptPal/package.json
@@ -14,6 +14,7 @@
     "axios-retry": "^4.5.0",
     "expo": "~54.0.31",
     "expo-asset": "~12.0.12",
+    "expo-constants": "~18.0.13",
     "expo-haptics": "^15.0.8",
     "expo-linking": "^8.0.11",
     "expo-router": "^6.0.21",
@@ -31,6 +32,8 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.28.6",
+    "@types/node": "^25.0.8",
     "@types/react": "~19.2.8",
     "typescript": "~5.9.3"
   },
