--- a/PromptPal/app.json
+++ b/PromptPal/app.json
@@ -12,6 +12,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#121212"
     },
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -24,7 +25,13 @@
       "predictiveBackGestureEnabled": false
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro",
+      "build": {
+        "babel": {
+          "include": ["nativewind"]
+        }
+      }
     },
     "plugins": ["expo-router"]
   }
