--- a/PromptPal/app.json
+++ b/PromptPal/app.json
@@ -6,12 +6,27 @@
     "orientation": "portrait",
     "userInterfaceStyle": "automatic",
     "scheme": "promptpal",
+    "splash": {
+      "image": "./assets/splash-icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#121212"
+    },
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
+    },
+    "web": {
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro",
+      "build": {
+        "babel": {
+          "include": ["nativewind"]
+        }
+      }
     },
     "plugins": ["expo-router"]
   }
