--- a/PromptPal/package.json
+++ b/PromptPal/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.19.18",
     "axios": "^1.13.2",
+    "axios-retry": "^4.5.0",
     "expo": "~54.0.30",
     "expo-asset": "~12.0.12",
     "expo-haptics": "^15.0.8",
