feat: implement proper Clerk Expo authentication setup
- Update ClerkProvider to use official token cache
- Create (auth) route group with protected auth routes
- Implement custom sign-up screen with email verification
- Implement custom sign-in screen
- Add SignOutButton component
- Create (home) route group with conditional rendering
- Update root layout to use Slot with Clerk conditional components
- Move existing routes to proper route groups
- Remove old auth directory structure

Follows Clerk Expo documentation for proper authentication flow

--- a/PromptPal/app.json
+++ b/PromptPal/app.json
@@ -4,36 +4,15 @@
     "slug": "PromptPal",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "userInterfaceStyle": "dark",
     "scheme": "promptpal",
-    "splash": {
-      "image": "./assets/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#121212"
-    },
     "ios": {
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#121212"
-      },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      [
-        "@clerk/clerk-expo",
-        {
-          "buildCache": false
-        }
-      ],
-      "expo-router"
-    ]
+    "plugins": ["expo-router"]
   }
 }
