fix(phase2): add Clerk plugin to app.json and update phase-2.md completion status

--- a/PromptPal/app.json
+++ b/PromptPal/app.json
@@ -13,6 +13,14 @@
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
-    "plugins": ["expo-router"]
+    "plugins": [
+      "expo-router",
+      [
+        "@clerk/clerk-expo",
+        {
+          "buildCache": false
+        }
+      ]
+    ]
   }
 }
