--- a/PromptPal/tsconfig.json
+++ b/PromptPal/tsconfig.json
@@ -9,7 +9,8 @@
       ]
     },
     "types": [
-      "nativewind/types"
+      "nativewind/types",
+      "node"
     ],
     "jsx": "react-jsx",
     "skipLibCheck": true,
