--- a/PromptPal/package.json
+++ b/PromptPal/package.json
@@ -33,8 +33,11 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.28.6",
+    "@testing-library/react-native": "^13.3.3",
     "@types/node": "^25.0.10",
     "@types/react": "~19.2.8",
+    "jest": "^30.2.0",
+    "react-test-renderer": "19.1.0",
     "typescript": "~5.9.3"
   },
   "private": true
