--- a/PromptPal/package.json
+++ b/PromptPal/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.19.18",
@@ -35,9 +36,14 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.28.6",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@jest/globals": "^30.2.0",
     "@testing-library/react-native": "^13.3.3",
     "@types/node": "^25.0.10",
     "@types/react": "~19.2.8",
+    "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.3"
