--- a/PromptPal/package.json
+++ b/PromptPal/package.json
@@ -6,19 +6,28 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "convex:dev": "convex dev",
+    "convex:deploy": "convex deploy",
+    "convex:seed": "convex run seed:seedApps"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.18",
     "@clerk/clerk-expo": "^2.19.18",
     "@react-native-community/netinfo": "^11.4.1",
+    "@shopify/flash-list": "^2.2.1",
+    "ai": "^6.0.62",
     "axios": "^1.13.2",
     "axios-retry": "^4.5.0",
-    "expo": "~54.0.32",
+    "convex": "^1.31.7",
+    "expo": "~54.0.33",
     "expo-asset": "~12.0.12",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~18.0.13",
     "expo-haptics": "^15.0.8",
+    "expo-image": "^3.0.11",
     "expo-linking": "^8.0.11",
-    "expo-router": "~6.0.22",
+    "expo-router": "~6.0.23",
     "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.2.1",
@@ -31,14 +40,15 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.2",
     "tailwindcss": "^3.4.19",
+    "zod": "^4.3.6",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.28.6",
     "@testing-library/react-native": "^13.3.3",
     "@types/node": "^25.0.10",
-    "@types/react": "~19.2.8",
-    "jest": "^30.2.0",
+    "@types/react": "~19.1.10",
+    "jest": "~29.7.0",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.3"
   },
